--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -29,6 +29,66 @@ body {
     
 }
 
+.genesys {
+  color: #ffffff;
+  position: relative;
+  display: inline-block;
+}
+
+.genesys::after,
+.genesys::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #000000, #4587b1);
+  bottom: -5px;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease-out;
+}
+
+.genesys::before {
+  top: -5px;
+  transform-origin: left;
+}
+
+.genesys:hover::after,
+.genesys:hover::before {
+  transform: scaleX(1);
+}
+
+.shows {
+  color: #ffffff;
+  position: relative;
+  display: inline-block;
+}
+
+.shows::after,
+.shows::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #000000, #4587b1);
+  bottom: -5px;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease-out;
+}
+
+.shows::before {
+  top: -5px;
+  transform-origin: left;
+}
+
+.shows:hover::after,
+.shows:hover::before {
+  transform: scaleX(1);
+}
+
 #wallpaper {
     margin: 0;
     padding: 0;
