--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -303,14 +303,21 @@ fieldset {
 
 @media only screen and (max-width: 480px) {
 
+  body {
+    margin: 0;
+    padding: 0;
+}
+
     header {
         flex-direction: column;
         align-items: center;
     }
 
     nav#nav {
-        display: flex;
-        flex-direction: column;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+       justify-content: center;
         align-items: center;
         margin-top: 10px;
     }
@@ -321,7 +328,7 @@ fieldset {
     }
 
     #logo img {
-        width: 60px;
+        width: 180px;
     }
 
    #wallpaper {
@@ -329,18 +336,20 @@ fieldset {
     padding: 0;
   }
 
-    #div1, #div2, #div3, #short, #formulario {
+    #div1, #div2, #div3, #formulario {
         padding: 0.5rem;
     }
 
     #div3 img {
         width: 100%;
+        padding: 0 auto;
     }
 
     iframe, .tiktok-embed {
-        width: 100%;
+        width: auto;
         height: auto;
     }
+
 
     video {
         width: 100%;
